--- a/LiveOn/LiveOn.csproj
+++ b/LiveOn/LiveOn.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Game\Dungeons\" />
+  </ItemGroup>
+
 </Project>
